Muted alerts are supressed and add "mutedBy" to APIv2
This commit updates TimeMuteStage to mark muted alerts as suppressed,
and adds the names of all mutes that mute the alert to a field called
mutedBy. This field is also returned in APIv2.
